--- a/books.ipynb
+++ b/books.ipynb
@@ -1,5 +1,53 @@
 {
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>series</th>\n      <th>author</th>\n      <th>average_rating</th>\n      <th>number_of_pages</th>\n      <th>date_published</th>\n      <th>genre_and_votes</th>\n      <th>settings</th>\n      <th>recommended_books</th>\n      <th>books_in_series</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>30629</th>\n      <td>Slow Ride</td>\n      <td>(Rough Riders #9.5)</td>\n      <td>Lorelei James</td>\n      <td>3.89</td>\n      <td>37.0</td>\n      <td>November 9th 2010</td>\n      <td>Romance 230, Westerns 154, Adult Fiction-Eroti...</td>\n      <td>NaN</td>\n      <td>1066038, 1066038, 53341745, 18271357, 53341762...</td>\n      <td>25185716, 2345511, 25239147, 3654380, 27809980...</td>\n    </tr>\n    <tr>\n      <th>11607</th>\n      <td>Mox Nox</td>\n      <td>NaN</td>\n      <td>Joan CornellÃ</td>\n      <td>4.00</td>\n      <td>56.0</td>\n      <td>2013</td>\n      <td>Sequential Art-Comics 27, Sequential Art-Graph...</td>\n      <td>NaN</td>\n      <td>18528240, 18528240, 25664507, 210946, 8793349,...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>13932</th>\n      <td>Consolation</td>\n      <td>(Salvation #3)</td>\n      <td>Corinne Michaels</td>\n      <td>4.36</td>\n      <td>302.0</td>\n      <td>March 18th 2015</td>\n      <td>Romance 284, War-Military Fiction 167, Romance...</td>\n      <td>Virginia(United States)</td>\n      <td>40550201, 40550201, 52912810, 50668664, 536021...</td>\n      <td>28961690, 28961761, 24241524, 27812784, 252590...</td>\n    </tr>\n    <tr>\n      <th>11964</th>\n      <td>Moral Tribes: Emotion, Reason, and the Gap Bet...</td>\n      <td>NaN</td>\n      <td>Joshua D. Greene</td>\n      <td>4.03</td>\n      <td>432.0</td>\n      <td>October 31st 2013</td>\n      <td>Psychology 257, Nonfiction 197, Philosophy 166...</td>\n      <td>NaN</td>\n      <td>25761655, 25761655, 17380034, 11324722, 172372...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>25372</th>\n      <td>The Complete Clive Barker's The Great And Secr...</td>\n      <td>(Clive Barker's The Great And Secret Show )</td>\n      <td>Chris Ryall, Gabriel RodrÃ­guez, Clive Barker</td>\n      <td>4.23</td>\n      <td>136.0</td>\n      <td>1989</td>\n      <td>Horror 176, Fantasy 74, Sequential Art-Graphic...</td>\n      <td>NaN</td>\n      <td>52629, 52629, 399477, 32628, 34605, 543154, 32...</td>\n      <td>34872</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                                                   title  \\\n30629                                          Slow Ride   \n11607                                            Mox Nox   \n13932                                        Consolation   \n11964  Moral Tribes: Emotion, Reason, and the Gap Bet...   \n25372  The Complete Clive Barker's The Great And Secr...   \n\n                                            series  \\\n30629                          (Rough Riders #9.5)   \n11607                                          NaN   \n13932                               (Salvation #3)   \n11964                                          NaN   \n25372  (Clive Barker's The Great And Secret Show )   \n\n                                              author  average_rating  \\\n30629                                  Lorelei James            3.89   \n11607                                 Joan CornellÃ             4.00   \n13932                               Corinne Michaels            4.36   \n11964                               Joshua D. Greene            4.03   \n25372  Chris Ryall, Gabriel RodrÃ­guez, Clive Barker            4.23   \n\n       number_of_pages     date_published  \\\n30629             37.0  November 9th 2010   \n11607             56.0               2013   \n13932            302.0    March 18th 2015   \n11964            432.0  October 31st 2013   \n25372            136.0               1989   \n\n                                         genre_and_votes  \\\n30629  Romance 230, Westerns 154, Adult Fiction-Eroti...   \n11607  Sequential Art-Comics 27, Sequential Art-Graph...   \n13932  Romance 284, War-Military Fiction 167, Romance...   \n11964  Psychology 257, Nonfiction 197, Philosophy 166...   \n25372  Horror 176, Fantasy 74, Sequential Art-Graphic...   \n\n                      settings  \\\n30629                      NaN   \n11607                      NaN   \n13932  Virginia(United States)   \n11964                      NaN   \n25372                      NaN   \n\n                                       recommended_books  \\\n30629  1066038, 1066038, 53341745, 18271357, 53341762...   \n11607  18528240, 18528240, 25664507, 210946, 8793349,...   \n13932  40550201, 40550201, 52912810, 50668664, 536021...   \n11964  25761655, 25761655, 17380034, 11324722, 172372...   \n25372  52629, 52629, 399477, 32628, 34605, 543154, 32...   \n\n                                         books_in_series  \n30629  25185716, 2345511, 25239147, 3654380, 27809980...  \n11607                                                NaN  \n13932  28961690, 28961761, 24241524, 27812784, 252590...  \n11964                                                NaN  \n25372                                              34872  "
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data = pd.read_csv(\"goodreads_books.csv\")\n",
+    "\n",
+    "# 0: unread\n",
+    "# 1: liked\n",
+    "# 2: disliked\n",
+    "\n",
+    "features = ['title', 'series', 'author', 'average_rating', 'number_of_pages', \n",
+    "'date_published', 'genre_and_votes', 'settings', 'recommended_books', 'books_in_series']\n",
+    "\n",
+    "X = full_data[features].copy()\n",
+    "y = full_data.rating\n",
+    "X_unread, X_read, y_unread, y_read = train_test_split(X, y, train_size = 0.997, test_size = 0.003, random_state = 0)\n",
+    "X_unread.head()\n"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -10,146 +58,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
+  "orig_nbformat": 2
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "        id                                              title  \\\n",
-       "0   630104                                       Inner Circle   \n",
-       "1     9487                                  A Time to Embrace   \n",
-       "2  6050894                                           Take Two   \n",
-       "3    39030                                          Reliquary   \n",
-       "4      998  The Millionaire Next Door: The Surprising Secr...   \n",
-       "\n",
-       "                                                link               series  \\\n",
-       "0  https://www.goodreads.com//book/show/630104.In...         (Private #5)   \n",
-       "1  https://www.goodreads.com//book/show/9487.A_Ti...   (Timeless Love #2)   \n",
-       "2  https://www.goodreads.com//book/show/6050894-t...  (Above the Line #2)   \n",
-       "3  https://www.goodreads.com//book/show/39030.Rel...      (Pendergast #2)   \n",
-       "4  https://www.goodreads.com//book/show/998.The_M...                  NaN   \n",
-       "\n",
-       "                                          cover_link  \\\n",
-       "0  https://i.gr-assets.com/images/S/compressed.ph...   \n",
-       "1  https://i.gr-assets.com/images/S/compressed.ph...   \n",
-       "2  https://i.gr-assets.com/images/S/compressed.ph...   \n",
-       "3  https://i.gr-assets.com/images/S/compressed.ph...   \n",
-       "4  https://i.gr-assets.com/images/S/compressed.ph...   \n",
-       "\n",
-       "                                author  \\\n",
-       "0            Kate Brian, Julian Peploe   \n",
-       "1                      Karen Kingsbury   \n",
-       "2                      Karen Kingsbury   \n",
-       "3       Douglas Preston, Lincoln Child   \n",
-       "4  Thomas J. Stanley, William D. Danko   \n",
-       "\n",
-       "                                         author_link  rating_count  \\\n",
-       "0  https://www.goodreads.com/author/show/94091.Ka...          7597   \n",
-       "1  https://www.goodreads.com/author/show/3159984....          4179   \n",
-       "2  https://www.goodreads.com/author/show/3159984....          6288   \n",
-       "3  https://www.goodreads.com/author/show/12577.Do...         38382   \n",
-       "4  https://www.goodreads.com/author/show/659.Thom...         72168   \n",
-       "\n",
-       "   review_count  average_rating  ...         isbn13  asin  \\\n",
-       "0           196            4.03  ...  9781416950417   NaN   \n",
-       "1           177            4.35  ...  9781595542328   NaN   \n",
-       "2           218            4.23  ...            NaN   NaN   \n",
-       "3          1424            4.01  ...  9780765354952   NaN   \n",
-       "4          3217            4.04  ...  9780671015206   NaN   \n",
-       "\n",
-       "                                            settings  \\\n",
-       "0                                                NaN   \n",
-       "1                                                NaN   \n",
-       "2                Bloomington, Indiana(United States)   \n",
-       "3  New York State(United States) New York City, N...   \n",
-       "4                                                NaN   \n",
-       "\n",
-       "                                          characters  \\\n",
-       "0                                                NaN   \n",
-       "1                                                NaN   \n",
-       "2                                                NaN   \n",
-       "3  Aloysius X.L. Pendergast, Margo Green, William...   \n",
-       "4                                                NaN   \n",
-       "\n",
-       "                                              awards  \\\n",
-       "0                                                NaN   \n",
-       "1                                                NaN   \n",
-       "2                                                NaN   \n",
-       "3                                                NaN   \n",
-       "4  Independent Publisher Book Award (IPPY) Nomine...   \n",
-       "\n",
-       "                                amazon_redirect_link  \\\n",
-       "0  https://www.goodreads.com//book_link/follow/17...   \n",
-       "1  https://www.goodreads.com//book_link/follow/17...   \n",
-       "2  https://www.goodreads.com//book_link/follow/17...   \n",
-       "3  https://www.goodreads.com//book_link/follow/17...   \n",
-       "4  https://www.goodreads.com//book_link/follow/17...   \n",
-       "\n",
-       "                              worldcat_redirect_link  \\\n",
-       "0  https://www.goodreads.com//book_link/follow/8?...   \n",
-       "1  https://www.goodreads.com//book_link/follow/8?...   \n",
-       "2  https://www.goodreads.com//book_link/follow/8?...   \n",
-       "3  https://www.goodreads.com//book_link/follow/8?...   \n",
-       "4  https://www.goodreads.com//book_link/follow/8?...   \n",
-       "\n",
-       "                                   recommended_books  \\\n",
-       "0  726458, 726458, 1537534, 3047848, 1651302, 304...   \n",
-       "1  127352, 127352, 40642197, 127353, 127354, 3891...   \n",
-       "2  706250, 706250, 666481, 11942636, 706241, 1273...   \n",
-       "3  39026, 39026, 11007668, 3986318, 51887330, 194...   \n",
-       "4  1052, 1052, 763362, 69571, 78427, 30186948, 10...   \n",
-       "\n",
-       "                                     books_in_series  \\\n",
-       "0  381489, 381501, 352428, 630103, 1783281, 17832...   \n",
-       "1                                             115036   \n",
-       "2                         4010795, 40792877, 7306261   \n",
-       "3  67035, 39031, 39033, 136637, 136638, 30068, 39...   \n",
-       "4                                                NaN   \n",
-       "\n",
-       "                                         description  \n",
-       "0  Reed Brennan arrived at Easton Academy expecti...  \n",
-       "1  Ideje az Ã¶lelÃ©snek TÃ¶rtÃ©net a remÃ©nyrÅl,...  \n",
-       "2  Filmmakers Chase Ryan and Keith Ellison have c...  \n",
-       "3                                                NaN  \n",
-       "4  The incredible national bestseller that is cha...  \n",
-       "\n",
-       "[5 rows x 31 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>title</th>\n      <th>link</th>\n      <th>series</th>\n      <th>cover_link</th>\n      <th>author</th>\n      <th>author_link</th>\n      <th>rating_count</th>\n      <th>review_count</th>\n      <th>average_rating</th>\n      <th>...</th>\n      <th>isbn13</th>\n      <th>asin</th>\n      <th>settings</th>\n      <th>characters</th>\n      <th>awards</th>\n      <th>amazon_redirect_link</th>\n      <th>worldcat_redirect_link</th>\n      <th>recommended_books</th>\n      <th>books_in_series</th>\n      <th>description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>630104</td>\n      <td>Inner Circle</td>\n      <td>https://www.goodreads.com//book/show/630104.In...</td>\n      <td>(Private #5)</td>\n      <td>https://i.gr-assets.com/images/S/compressed.ph...</td>\n      <td>Kate Brian, Julian Peploe</td>\n      <td>https://www.goodreads.com/author/show/94091.Ka...</td>\n      <td>7597</td>\n      <td>196</td>\n      <td>4.03</td>\n      <td>...</td>\n      <td>9781416950417</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>https://www.goodreads.com//book_link/follow/17...</td>\n      <td>https://www.goodreads.com//book_link/follow/8?...</td>\n      <td>726458, 726458, 1537534, 3047848, 1651302, 304...</td>\n      <td>381489, 381501, 352428, 630103, 1783281, 17832...</td>\n      <td>Reed Brennan arrived at Easton Academy expecti...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>9487</td>\n      <td>A Time to Embrace</td>\n      <td>https://www.goodreads.com//book/show/9487.A_Ti...</td>\n      <td>(Timeless Love #2)</td>\n      <td>https://i.gr-assets.com/images/S/compressed.ph...</td>\n      <td>Karen Kingsbury</td>\n      <td>https://www.goodreads.com/author/show/3159984....</td>\n      <td>4179</td>\n      <td>177</td>\n      <td>4.35</td>\n      <td>...</td>\n      <td>9781595542328</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>https://www.goodreads.com//book_link/follow/17...</td>\n      <td>https://www.goodreads.com//book_link/follow/8?...</td>\n      <td>127352, 127352, 40642197, 127353, 127354, 3891...</td>\n      <td>115036</td>\n      <td>Ideje az Ã¶lelÃ©snek TÃ¶rtÃ©net a remÃ©nyrÅl,...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>6050894</td>\n      <td>Take Two</td>\n      <td>https://www.goodreads.com//book/show/6050894-t...</td>\n      <td>(Above the Line #2)</td>\n      <td>https://i.gr-assets.com/images/S/compressed.ph...</td>\n      <td>Karen Kingsbury</td>\n      <td>https://www.goodreads.com/author/show/3159984....</td>\n      <td>6288</td>\n      <td>218</td>\n      <td>4.23</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Bloomington, Indiana(United States)</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>https://www.goodreads.com//book_link/follow/17...</td>\n      <td>https://www.goodreads.com//book_link/follow/8?...</td>\n      <td>706250, 706250, 666481, 11942636, 706241, 1273...</td>\n      <td>4010795, 40792877, 7306261</td>\n      <td>Filmmakers Chase Ryan and Keith Ellison have c...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>39030</td>\n      <td>Reliquary</td>\n      <td>https://www.goodreads.com//book/show/39030.Rel...</td>\n      <td>(Pendergast #2)</td>\n      <td>https://i.gr-assets.com/images/S/compressed.ph...</td>\n      <td>Douglas Preston, Lincoln Child</td>\n      <td>https://www.goodreads.com/author/show/12577.Do...</td>\n      <td>38382</td>\n      <td>1424</td>\n      <td>4.01</td>\n      <td>...</td>\n      <td>9780765354952</td>\n      <td>NaN</td>\n      <td>New York State(United States) New York City, N...</td>\n      <td>Aloysius X.L. Pendergast, Margo Green, William...</td>\n      <td>NaN</td>\n      <td>https://www.goodreads.com//book_link/follow/17...</td>\n      <td>https://www.goodreads.com//book_link/follow/8?...</td>\n      <td>39026, 39026, 11007668, 3986318, 51887330, 194...</td>\n      <td>67035, 39031, 39033, 136637, 136638, 30068, 39...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>998</td>\n      <td>The Millionaire Next Door: The Surprising Secr...</td>\n      <td>https://www.goodreads.com//book/show/998.The_M...</td>\n      <td>NaN</td>\n      <td>https://i.gr-assets.com/images/S/compressed.ph...</td>\n      <td>Thomas J. Stanley, William D. Danko</td>\n      <td>https://www.goodreads.com/author/show/659.Thom...</td>\n      <td>72168</td>\n      <td>3217</td>\n      <td>4.04</td>\n      <td>...</td>\n      <td>9780671015206</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Independent Publisher Book Award (IPPY) Nomine...</td>\n      <td>https://www.goodreads.com//book_link/follow/17...</td>\n      <td>https://www.goodreads.com//book_link/follow/8?...</td>\n      <td>1052, 1052, 763362, 69571, 78427, 30186948, 10...</td>\n      <td>NaN</td>\n      <td>The incredible national bestseller that is cha...</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 31 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
-   "source": [
-    "full_data = pd.read_csv(\"goodreads_books.csv\")\n",
-    "full_data.head()"
-   ]
-  }
- ]
+ "nbformat_minor": 2
 }
