updated features & notes

--- a/books.ipynb
+++ b/books.ipynb
@@ -92,8 +92,14 @@
     "# 1: liked\n",
     "# 2: disliked\n",
     "\n",
-    "features = ['title', 'series', 'author', 'average_rating', 'number_of_pages', \n",
-    "'date_published', 'genre_and_votes', 'settings', 'recommended_books', 'books_in_series']\n",
+    "# Class A: average_rating, number_of_pages, date_published (only year), 1-5 star ratings\n",
+    "# Class B: genre_and_votes, author, \n",
+    "# Class C: recommended_books, books_in_series,\n",
+    "\n",
+    "features = [    'author', 'average_rating', 'five_star_ratings', \n",
+    "                'four_star_ratings', 'three_star_ratings', 'two_star_ratings',\n",
+    "                'one_star_ratings', 'number_of_pages', \n",
+    "                'date_published', 'genre_and_votes'     ]\n",
     "\n",
     "X = full_data[features].copy()\n",
     "\n",
