now finds year-published

--- a/books.ipynb
+++ b/books.ipynb
@@ -412,7 +412,7 @@
     "\n",
     "    bookPubStr = X['date_published'][bookIndex]\n",
     "    bookPubDate = dateparser.parse(bookPubStr)\n",
-    "    print(bookPubDate)\n",
+    "    bookPubYear = bookPubDate.year\n",
     "\n",
     "\n",
     "y = full_data.rating\n",
