--- a/outlier3.ipynb
+++ b/outlier3.ipynb
@@ -27,6 +27,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "\n",
+    "# change the date and period to an int (either month and year as seperate columns or a timestamp)\n",
+    "# experiment with column combinations more\n",
+    "# experiment with training on whole dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -209,7 +222,7 @@
        "4   1794581.59   First Buyout Check  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -257,12 +270,14 @@
        "      <th>GLCODE</th>\n",
        "      <th>PROPERTY</th>\n",
        "      <th>UNIT</th>\n",
-       "      <th>DATE</th>\n",
        "      <th>PERIOD</th>\n",
        "      <th>AMOUNT</th>\n",
        "      <th>DEBITCREDIT</th>\n",
        "      <th>DESCRIPTION</th>\n",
        "      <th>REMARKS</th>\n",
+       "      <th>DATEDAY</th>\n",
+       "      <th>DATEMO</th>\n",
+       "      <th>DATEYR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -271,82 +286,92 @@
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42031</td>\n",
-       "      <td>09/09/2020</td>\n",
        "      <td>12/01/2020</td>\n",
        "      <td>8500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Webster S8 (t0034597)</td>\n",
        "      <td>first buyout check</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42032</td>\n",
-       "      <td>09/29/2020</td>\n",
        "      <td>12/01/2020</td>\n",
        "      <td>2500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Webster (t0034598)</td>\n",
        "      <td></td>\n",
+       "      <td>29</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42031</td>\n",
-       "      <td>10/27/2020</td>\n",
        "      <td>12/01/2020</td>\n",
        "      <td>9100.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Webster S8 (t0034597)</td>\n",
        "      <td></td>\n",
+       "      <td>27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42052</td>\n",
-       "      <td>10/29/2020</td>\n",
        "      <td>12/01/2020</td>\n",
        "      <td>3500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Jones (t0034602)</td>\n",
        "      <td>first buyout check</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42053</td>\n",
-       "      <td>11/02/2020</td>\n",
        "      <td>12/01/2020</td>\n",
        "      <td>3500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Dow (t0034603)</td>\n",
        "      <td>first buyout check</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2020</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      GLCODE  PROPERTY    UNIT         DATE       PERIOD  AMOUNT DEBITCREDIT  \\\n",
-       "0  1110-0000   ap-mc11   42031   09/09/2020   12/01/2020  8500.0      Credit   \n",
-       "1  1110-0000   ap-mc11   42032   09/29/2020   12/01/2020  2500.0      Credit   \n",
-       "2  1110-0000   ap-mc11   42031   10/27/2020   12/01/2020  9100.0      Credit   \n",
-       "3  1110-0000   ap-mc11   42052   10/29/2020   12/01/2020  3500.0      Credit   \n",
-       "4  1110-0000   ap-mc11   42053   11/02/2020   12/01/2020  3500.0      Credit   \n",
+       "      GLCODE  PROPERTY    UNIT       PERIOD  AMOUNT DEBITCREDIT  \\\n",
+       "0  1110-0000   ap-mc11   42031   12/01/2020  8500.0      Credit   \n",
+       "1  1110-0000   ap-mc11   42032   12/01/2020  2500.0      Credit   \n",
+       "2  1110-0000   ap-mc11   42031   12/01/2020  9100.0      Credit   \n",
+       "3  1110-0000   ap-mc11   42052   12/01/2020  3500.0      Credit   \n",
+       "4  1110-0000   ap-mc11   42053   12/01/2020  3500.0      Credit   \n",
        "\n",
-       "              DESCRIPTION              REMARKS  \n",
-       "0   Webster S8 (t0034597)   first buyout check  \n",
-       "1      Webster (t0034598)                       \n",
-       "2   Webster S8 (t0034597)                       \n",
-       "3        Jones (t0034602)   first buyout check  \n",
-       "4          Dow (t0034603)   first buyout check  "
+       "              DESCRIPTION              REMARKS  DATEDAY  DATEMO  DATEYR  \n",
+       "0   Webster S8 (t0034597)   first buyout check        9       9    2020  \n",
+       "1      Webster (t0034598)                            29       9    2020  \n",
+       "2   Webster S8 (t0034597)                            27      10    2020  \n",
+       "3        Jones (t0034602)   first buyout check       29      10    2020  \n",
+       "4          Dow (t0034603)   first buyout check        2      11    2020  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,6 +382,14 @@
     "cols = ['GLCODE', 'PROPERTY', 'UNIT', 'DATE', 'PERIOD', 'AMOUNT', 'DEBITCREDIT', 'DESCRIPTION', 'REMARKS']\n",
     "df = df[cols]\n",
     "\n",
+    "df['DATE'] = df['DATE'].map(lambda d: datetime.strptime(d, ' %m/%d/%Y'))\n",
+    "\n",
+    "df['DATEDAY'] = df['DATE'].map(lambda d: int(d.day))\n",
+    "df['DATEMO'] = df['DATE'].map(lambda d: int(d.month))\n",
+    "df['DATEYR'] = df['DATE'].map(lambda d: int(d.year))\n",
+    "\n",
+    "df = df.drop(columns=['DATE'], axis=1)\n",
+    "\n",
     "df['REMARKS'] = df['REMARKS'].map(lambda r: r.lower())\n",
     "\n",
     "df.head()\n"
@@ -364,7 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#glcodes = ['5305-0000', '5310-0000', '5315-0000']\n",
+    "\n",
+    "#df['GLCODE'] = df['GLCODE'].map(lambda g: g if glcodes.count(g) > 0 else np.nan)\n",
+    "\n",
+    "#df = df.dropna(axis=0)\n",
+    "#df = df.reset_index(drop=True)\n",
+    "\n",
+    "#df.groupby('GLCODE').GLCODE.count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,6 +424,7 @@
     "\n",
     "preXTrain, preXTest, yTrain, yTest = train_test_split(X, y, test_size=0.15, random_state=1)\n",
     "\n",
+    "\n",
     "preXTrain = preXTrain.reset_index(drop=True)\n",
     "yTrain = yTrain.reset_index(drop=True)\n",
     "preXTest = preXTest.reset_index(drop=True)\n",
@@ -383,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,12 +484,12 @@
     "model.fit(XTrain, yTrain)\n",
     "\n",
     "testPreds = pd.Series(model.predict(XTest))\n",
-    "testPreds = testPreds.map(lambda pred: round(pred, 2))\n"
+    "testPreds = testPreds.map(lambda pred: round(pred, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,15 +498,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4830 9687\n",
-      "7145 7390\n"
+      "4749 9765\n",
+      "7238 7297\n"
      ]
     }
    ],
@@ -493,16 +543,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(14535, 1)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -531,28 +574,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>64.99</td>\n",
-       "      <td>100</td>\n",
+       "      <td>12.65</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>51.45</td>\n",
-       "      <td>100</td>\n",
+       "      <td>33.98</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6241.00</td>\n",
+       "      <td>6583.66</td>\n",
        "      <td>10000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>22.91</td>\n",
-       "      <td>50</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>46.00</td>\n",
-       "      <td>50</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -560,14 +603,14 @@
       ],
       "text/plain": [
        "   percentOff  category\n",
-       "0       64.99       100\n",
-       "1       51.45       100\n",
-       "2     6241.00     10000\n",
-       "3       22.91        50\n",
-       "4       46.00        50"
+       "0       12.65        20\n",
+       "1       33.98        50\n",
+       "2     6583.66     10000\n",
+       "3        3.25         5\n",
+       "4        1.93         5"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,8 +641,6 @@
     "    else:\n",
     "        return 'unknown'\n",
     "\n",
-    "    \n",
-    "print(percentsDf.shape)\n",
     "\n",
     "percentsDf['category'] = percentsDf.apply(lambda p: categorizePercents(p['percentOff']), axis=1)\n",
     "percentsDf.head()\n"
@@ -607,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -615,15 +656,15 @@
      "output_type": "stream",
      "text": [
       "   category  count  percentOfTotal\n",
-      "0         5   4830       33.230134\n",
-      "1        10    968        6.659787\n",
-      "2        20   1160        7.980736\n",
-      "3        50   2055       14.138287\n",
-      "4       100   1827       12.569659\n",
-      "5       200    720        4.953560\n",
-      "6       500    694        4.774682\n",
-      "7      1000    408        2.807018\n",
-      "8     10000   1873       12.886137\n"
+      "0         5   4749       32.672859\n",
+      "1        10    987        6.790506\n",
+      "2        20   1236        8.503612\n",
+      "3        50   2032       13.980048\n",
+      "4       100   1813       12.473340\n",
+      "5       200    707        4.864121\n",
+      "6       500    697        4.795322\n",
+      "7      1000    420        2.889577\n",
+      "8     10000   1894       13.030616\n"
      ]
     }
    ],
@@ -635,64 +676,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       actual  predicted\n",
-      "0      176.07     290.50\n",
-      "1      174.03      84.49\n",
-      "2        3.61     228.91\n",
-      "3      863.00     665.27\n",
-      "4      640.66     935.37\n",
-      "...       ...        ...\n",
-      "14530   70.00      68.53\n",
-      "14531    0.36       1.04\n",
-      "14532   47.19      43.64\n",
-      "14533    3.60       3.60\n",
-      "14534  225.00     246.24\n",
-      "\n",
-      "[14535 rows x 2 columns]\n"
+      "     actual  predicted\n",
+      "0    176.07     153.79\n",
+      "1    174.03     114.90\n",
+      "2      3.61     241.28\n",
+      "3    863.00     834.94\n",
+      "4    640.66     653.04\n",
+      "5    161.80     551.22\n",
+      "6    805.32     530.99\n",
+      "7      3.61      14.78\n",
+      "8   1602.00    1475.10\n",
+      "9   1800.00    1800.00\n",
+      "10     3.61       3.61\n",
+      "11  1365.00    1378.50\n",
+      "12     3.60       3.82\n",
+      "13  1091.22     478.22\n",
+      "14     3.61       3.61\n",
+      "15     3.61     583.88\n",
+      "16    90.00      91.88\n",
+      "17    70.00     373.76\n",
+      "18   836.41     283.13\n",
+      "19    97.60     137.83\n",
+      "20     3.60       3.75\n",
+      "21    89.15      86.28\n",
+      "22     6.31     235.40\n",
+      "23     1.34     528.13\n",
+      "24    33.06     522.09\n"
      ]
     }
    ],
    "source": [
     "comparison = pd.concat([yTest, testPreds], axis=1)\n",
     "comparison.columns = ['actual', 'predicted']\n",
-    "print(comparison)\n"
+    "print(comparison.iloc[0:25])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: 0.5071391110595351\n",
-      "MAE: 1606.129045751634\n",
-      "RMSE: 32379.78953166789\n",
-      "MAPE: 382.04661002199833\n"
+      "R2: 0.5284761647693281\n",
+      "MAE: 1706.3541087031306\n",
+      "RMSE: 31671.138018247442\n"
      ]
     }
    ],
    "source": [
     "print('R2:', model.score(XTest, yTest))\n",
     "print('MAE:', metrics.mean_absolute_error(yTest, testPreds))\n",
-    "print('RMSE:', metrics.mean_squared_error(yTest, testPreds, squared=False))\n",
-    "print('MAPE:', np.mean(np.abs((yTest - testPreds) / np.abs(yTest))))\n"
+    "print('RMSE:', metrics.mean_squared_error(yTest, testPreds, squared=False))\n"
    ]
   }
  ],
