--- a/outlier3.ipynb
+++ b/outlier3.ipynb
@@ -270,7 +270,6 @@
        "      <th>GLCODE</th>\n",
        "      <th>PROPERTY</th>\n",
        "      <th>UNIT</th>\n",
-       "      <th>PERIOD</th>\n",
        "      <th>AMOUNT</th>\n",
        "      <th>DEBITCREDIT</th>\n",
        "      <th>DESCRIPTION</th>\n",
@@ -286,7 +285,6 @@
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42031</td>\n",
-       "      <td>12/01/2020</td>\n",
        "      <td>8500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Webster S8 (t0034597)</td>\n",
@@ -300,7 +298,6 @@
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42032</td>\n",
-       "      <td>12/01/2020</td>\n",
        "      <td>2500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Webster (t0034598)</td>\n",
@@ -314,7 +311,6 @@
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42031</td>\n",
-       "      <td>12/01/2020</td>\n",
        "      <td>9100.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Webster S8 (t0034597)</td>\n",
@@ -328,7 +324,6 @@
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42052</td>\n",
-       "      <td>12/01/2020</td>\n",
        "      <td>3500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Jones (t0034602)</td>\n",
@@ -342,7 +337,6 @@
        "      <td>1110-0000</td>\n",
        "      <td>ap-mc11</td>\n",
        "      <td>42053</td>\n",
-       "      <td>12/01/2020</td>\n",
        "      <td>3500.0</td>\n",
        "      <td>Credit</td>\n",
        "      <td>Dow (t0034603)</td>\n",
@@ -356,19 +350,19 @@
        "</div>"
       ],
       "text/plain": [
-       "      GLCODE  PROPERTY    UNIT       PERIOD  AMOUNT DEBITCREDIT  \\\n",
-       "0  1110-0000   ap-mc11   42031   12/01/2020  8500.0      Credit   \n",
-       "1  1110-0000   ap-mc11   42032   12/01/2020  2500.0      Credit   \n",
-       "2  1110-0000   ap-mc11   42031   12/01/2020  9100.0      Credit   \n",
-       "3  1110-0000   ap-mc11   42052   12/01/2020  3500.0      Credit   \n",
-       "4  1110-0000   ap-mc11   42053   12/01/2020  3500.0      Credit   \n",
+       "      GLCODE  PROPERTY    UNIT  AMOUNT DEBITCREDIT             DESCRIPTION  \\\n",
+       "0  1110-0000   ap-mc11   42031  8500.0      Credit   Webster S8 (t0034597)   \n",
+       "1  1110-0000   ap-mc11   42032  2500.0      Credit      Webster (t0034598)   \n",
+       "2  1110-0000   ap-mc11   42031  9100.0      Credit   Webster S8 (t0034597)   \n",
+       "3  1110-0000   ap-mc11   42052  3500.0      Credit        Jones (t0034602)   \n",
+       "4  1110-0000   ap-mc11   42053  3500.0      Credit          Dow (t0034603)   \n",
        "\n",
-       "              DESCRIPTION              REMARKS  DATEDAY  DATEMO  DATEYR  \n",
-       "0   Webster S8 (t0034597)   first buyout check        9       9    2020  \n",
-       "1      Webster (t0034598)                            29       9    2020  \n",
-       "2   Webster S8 (t0034597)                            27      10    2020  \n",
-       "3        Jones (t0034602)   first buyout check       29      10    2020  \n",
-       "4          Dow (t0034603)   first buyout check        2      11    2020  "
+       "               REMARKS  DATEDAY  DATEMO  DATEYR  \n",
+       "0   first buyout check        9       9    2020  \n",
+       "1                            29       9    2020  \n",
+       "2                            27      10    2020  \n",
+       "3   first buyout check       29      10    2020  \n",
+       "4   first buyout check        2      11    2020  "
       ]
      },
      "execution_count": 5,
@@ -379,7 +373,7 @@
    "source": [
     "df.columns = df.columns.map(lambda c: c.strip())\n",
     "\n",
-    "cols = ['GLCODE', 'PROPERTY', 'UNIT', 'DATE', 'PERIOD', 'AMOUNT', 'DEBITCREDIT', 'DESCRIPTION', 'REMARKS']\n",
+    "cols = ['GLCODE', 'PROPERTY', 'UNIT', 'DATE', 'AMOUNT', 'DEBITCREDIT', 'DESCRIPTION', 'REMARKS']\n",
     "df = df[cols]\n",
     "\n",
     "df['DATE'] = df['DATE'].map(lambda d: datetime.strptime(d, ' %m/%d/%Y'))\n",
@@ -401,22 +395,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#glcodes = ['5305-0000', '5310-0000', '5315-0000']\n",
-    "\n",
-    "#df['GLCODE'] = df['GLCODE'].map(lambda g: g if glcodes.count(g) > 0 else np.nan)\n",
-    "\n",
-    "#df = df.dropna(axis=0)\n",
-    "#df = df.reset_index(drop=True)\n",
-    "\n",
-    "#df.groupby('GLCODE').GLCODE.count()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X = df.copy()\n",
     "X = X.drop(['AMOUNT'], axis=1)\n",
     "\n",
@@ -424,6 +402,10 @@
     "\n",
     "preXTrain, preXTest, yTrain, yTest = train_test_split(X, y, test_size=0.15, random_state=1)\n",
     "\n",
+    "#preXTrain = X\n",
+    "#yTrain = y\n",
+    "#preXTest = X\n",
+    "#yTest = y\n",
     "\n",
     "preXTrain = preXTrain.reset_index(drop=True)\n",
     "yTrain = yTrain.reset_index(drop=True)\n",
@@ -433,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,11 +458,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = RandomForestRegressor(n_estimators=40, random_state=0)\n",
+    "model = RandomForestRegressor(n_estimators=35, random_state=0)\n",
     "model.fit(XTrain, yTrain)\n",
     "\n",
     "testPreds = pd.Series(model.predict(XTest))\n",
@@ -489,11 +471,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ***** MODEL EVALUATION *****"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     actual  predicted\n",
+      "0    176.07     197.53\n",
+      "1    174.03     109.77\n",
+      "2      3.61     236.03\n",
+      "3    863.00     889.58\n",
+      "4    640.66     965.23\n",
+      "5    161.80     524.55\n",
+      "6    805.32     813.48\n",
+      "7      3.61      14.82\n",
+      "8   1602.00    1499.50\n",
+      "9   1800.00    1800.00\n",
+      "10     3.61       3.61\n",
+      "11  1365.00    1370.43\n",
+      "12     3.60       3.60\n",
+      "13  1091.22     494.09\n",
+      "14     3.61       3.61\n",
+      "15     3.61     570.32\n",
+      "16    90.00      91.07\n",
+      "17    70.00     298.76\n",
+      "18   836.41     241.49\n",
+      "19    97.60     140.35\n",
+      "20     3.60       3.87\n",
+      "21    89.15      79.94\n",
+      "22     6.31     216.47\n",
+      "23     1.34     486.69\n",
+      "24    33.06     473.64\n"
+     ]
+    }
+   ],
+   "source": [
+    "comparison = pd.concat([yTest, testPreds], axis=1)\n",
+    "comparison.columns = ['actual', 'predicted']\n",
+    "print(comparison.iloc[0:25])\n"
    ]
   },
   {
@@ -505,17 +531,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4749 9765\n",
-      "7238 7297\n"
+      "   category  count  percentOfTotal\n",
+      "0         5   4782       32.899897\n",
+      "1        10   1051        7.230822\n",
+      "2        20   1166        8.022016\n",
+      "3        50   2046       14.076367\n",
+      "4       100   1786       12.287582\n",
+      "5       200    728        5.008600\n",
+      "6       500    680        4.678363\n",
+      "7      1000    422        2.903337\n",
+      "8     10000   1874       12.893017\n"
      ]
     }
    ],
    "source": [
-    "acceptablePercent = 5  \n",
     "percentsList = []\n",
-    "\n",
-    "predHighCount = 0\n",
-    "predLowCount = 0\n",
     "\n",
     "for i in range(0, len(yTest)):\n",
     "    \n",
@@ -526,96 +556,7 @@
     "    percentOff = abs(100-percentOfReal)\n",
     "    \n",
     "    percentsList.append(round(percentOff, 2))\n",
-    "    \n",
-    "    \n",
-    "    if pred > real:\n",
-    "        predHighCount = predHighCount+1\n",
-    "    else:\n",
-    "        predLowCount = predLowCount+1\n",
-    "    \n",
     "\n",
-    "goodPreds = [x for x in percentsList if x < acceptablePercent]\n",
-    "badPreds = [x for x in percentsList if x > acceptablePercent]\n",
-    "\n",
-    "print(len(goodPreds), len(badPreds))\n",
-    "print(predHighCount, predLowCount)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>percentOff</th>\n",
-       "      <th>category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12.65</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>33.98</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6583.66</td>\n",
-       "      <td>10000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.25</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.93</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   percentOff  category\n",
-       "0       12.65        20\n",
-       "1       33.98        50\n",
-       "2     6583.66     10000\n",
-       "3        3.25         5\n",
-       "4        1.93         5"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "percentsDf = pd.DataFrame(percentsList, columns=['percentOff'])\n",
     "percentsDf.head()\n",
     "\n",
@@ -643,98 +584,30 @@
     "\n",
     "\n",
     "percentsDf['category'] = percentsDf.apply(lambda p: categorizePercents(p['percentOff']), axis=1)\n",
-    "percentsDf.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   category  count  percentOfTotal\n",
-      "0         5   4749       32.672859\n",
-      "1        10    987        6.790506\n",
-      "2        20   1236        8.503612\n",
-      "3        50   2032       13.980048\n",
-      "4       100   1813       12.473340\n",
-      "5       200    707        4.864121\n",
-      "6       500    697        4.795322\n",
-      "7      1000    420        2.889577\n",
-      "8     10000   1894       13.030616\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
     "percentRangeDf = percentsDf.groupby('category').size().reset_index(name='count')\n",
     "percentRangeDf['percentOfTotal'] = percentRangeDf['count']/len(percentsDf.index)*100\n",
+    "\n",
     "print(percentRangeDf)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     actual  predicted\n",
-      "0    176.07     153.79\n",
-      "1    174.03     114.90\n",
-      "2      3.61     241.28\n",
-      "3    863.00     834.94\n",
-      "4    640.66     653.04\n",
-      "5    161.80     551.22\n",
-      "6    805.32     530.99\n",
-      "7      3.61      14.78\n",
-      "8   1602.00    1475.10\n",
-      "9   1800.00    1800.00\n",
-      "10     3.61       3.61\n",
-      "11  1365.00    1378.50\n",
-      "12     3.60       3.82\n",
-      "13  1091.22     478.22\n",
-      "14     3.61       3.61\n",
-      "15     3.61     583.88\n",
-      "16    90.00      91.88\n",
-      "17    70.00     373.76\n",
-      "18   836.41     283.13\n",
-      "19    97.60     137.83\n",
-      "20     3.60       3.75\n",
-      "21    89.15      86.28\n",
-      "22     6.31     235.40\n",
-      "23     1.34     528.13\n",
-      "24    33.06     522.09\n"
+      "R2: 0.5494402569980086\n",
+      "MAE: 1636.380663226694\n",
+      "RMSE: 30959.079263838452\n"
      ]
     }
    ],
    "source": [
-    "comparison = pd.concat([yTest, testPreds], axis=1)\n",
-    "comparison.columns = ['actual', 'predicted']\n",
-    "print(comparison.iloc[0:25])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R2: 0.5284761647693281\n",
-      "MAE: 1706.3541087031306\n",
-      "RMSE: 31671.138018247442\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('R2:', model.score(XTest, yTest))\n",
+    "print('R2:', metrics.r2_score(yTest, testPreds))\n",
     "print('MAE:', metrics.mean_absolute_error(yTest, testPreds))\n",
     "print('RMSE:', metrics.mean_squared_error(yTest, testPreds, squared=False))\n"
    ]
